--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,3 +1,48 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  @font-face {
+    font-family: 'Darker Grotesque';
+    font-weight: 300;
+
+    src: url('/fonts/DarkerGrotesque-Light.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Darker Grotesque';
+    font-weight: 400;
+
+    src: url('/fonts/DarkerGrotesque-Regular.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Darker Grotesque';
+    font-weight: 500;
+
+    src: url('/fonts/DarkerGrotesque-Medium.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Darker Grotesque';
+    font-weight: 600;
+
+    src: url('/fonts/DarkerGrotesque-SemiBold.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Darker Grotesque';
+    font-weight: 700;
+
+    src: url('/fonts/DarkerGrotesque-Bold.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Darker Grotesque';
+    font-weight: 800;
+
+    src: url('/fonts/DarkerGrotesque-ExtraBold.ttf') format('truetype');
+  }
+  @font-face {
+    font-family: 'Darker Grotesque';
+    font-weight: 900;
+
+    src: url('/fonts/DarkerGrotesque-Black.ttf') format('truetype');
+  }
+}
