modal styles, added moment.js to project

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -45,4 +45,8 @@
 
     src: url('/fonts/DarkerGrotesque-Black.ttf') format('truetype');
   }
+
+  .btn {
+    @apply font-bold border-black border-4 bg-red-500;
+  }
 }
